--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+  configuration: /docs/conf.py
 
 # Build documentation with MkDocs
 #mkdocs:
@@ -18,7 +18,6 @@ formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.7
+   version: 3.9
    install:
-      - requirements: docs/requirements.txt
-      - path: .
+      - requirements: /docs/requirements.txt
